--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
 							<button type="button" class="btn-close btn-close-white offcanvas-close offcanvas-nav-close" aria-label="Close"></button>
 						</div>
 						<ul class="navbar-nav">
-							<li class="nav-item"><a class="nav-link" href="/">Inicio</a>
+							<li class="nav-item"><a class="nav-link" href="/">HOLA MUNDO</a>
 							</li>
 							<li class="nav-item dropdown"><a class="nav-link" href="nosotros.html">Nosotros</a>
 							</li>
